--- a/clients/react-movies/src/index.css
+++ b/clients/react-movies/src/index.css
@@ -5,6 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #16314f;
+  color: #fff;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(232, 238, 190);
 }
 
 code {
